# cagoule-pass

./: .gitignore  README.md  fix_imports.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
cagoule_pass/: __init__.py  __version__.py  cli.py  config.py  entry.py  generator.py  ssh.py  totp.py  vault.py
cagoule_pass/tui/: __init__.py  app.py
cagoule_pass/tui/screens/: __init__.py  add_screen.py  delete_screen.py  edit_screen.py  qrcode_screen.py
cagoule_pass/tui/widgets/: __init__.py  totp_widget.py  totp_widgets.py
docs/: cagoule_pass.html  index.html  search.js
docs/cagoule_pass/: __version__.html
tests/: test_config.py  test_entry.py  test_generator.py  test_ssh.py  test_totp.py  test_vault.py
