[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagoule-pass"
version = "1.5.1"
description = "Gestionnaire de mots de passe chiffré avec CAGOULE (TOTP, SSH, TUI)"
readme = "README.md"
license = "MIT"
authors = [{name = "Slim Issa", email = "slim.issa@example.com"}]
requires-python = ">=3.9"
keywords = ["password", "manager", "encryption", "cagoule", "security", "cli", "totp", "ssh", "2fa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cagoule>=1.5.0",
    'tomli>=1.1.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "tomli>=1.1.0",
]
tui = [
    "textual>=0.80.0",
]
ssh = [
    "cryptography>=42.0.0",
]
full = [
    "textual>=0.80.0",
    "cryptography>=42.0.0",
    "segno>=1.6.0",
]

[project.scripts]
cagoule-pass = "cagoule_pass.cli:main"

[project.urls]
Homepage = "https://github.com/slimissa/CAGOULE"
Repository = "https://github.com/slimissa/cagoule-pass"

[tool.setuptools]
packages = ["cagoule_pass"]

[tool.setuptools.package-data]
cagoule_pass = ["py.typed", "tui/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
timeout = 60

[tool.coverage.run]
source = ["cagoule_pass"]
omit = ["tests/*", "cagoule_pass/cli.py"]